--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,13 @@
   <div id="root">
     <div class="container"></div>
   </div>
+  <small class="github-link">Thank you for visiting my React.js weather app!
+    <div>
+      This project was coded by Chihiro Ismail, and is
+      <a href="https://github.com/Chihiro-001/weather-app-react" target="_blank">open-sourced on GitHub</a>
+      hosted on Netlify.
+    </div>
+  </small>
   <!--
         This HTML file is a template.
         If you open it directly in the browser, you will see an empty page.
